Added connection strings with appsettings.json

--- a/MilitaryStore/appsettings.json
+++ b/MilitaryStore/appsettings.json
@@ -1,8 +1,7 @@
 ﻿{
   "Data": {
     "MilitaryStoreProducts": {
-      "ConnectionString": "\"Server=(localdb)\\\\MSSQLLocalDB;Database=MilitaryStore;Trusted_Connec",
-      "tion=True;MultipleActiveResultSets=true\""
+      "ConnectionString": "\"Server=(localdb)\\\\MSSQLLocalDB;Database=MilitaryStore;Trusted_Connection=True;MultipleActiveResultSets=true\""
     }
   }
 }
