--- a/tests/MilitaryStore.Tests/MilitaryStore.Tests.csproj
+++ b/tests/MilitaryStore.Tests/MilitaryStore.Tests.csproj
@@ -4,4 +4,13 @@
     <TargetFramework>netcoreapp2.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Moq" Version="4.8.1" />
+    <PackageReference Include="xunit" Version="2.3.1" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\..\MilitaryStore\MilitaryStore.csproj" />
+  </ItemGroup>
+
 </Project>
