--- a/MilitaryStore/MilitaryStore.csproj
+++ b/MilitaryStore/MilitaryStore.csproj
@@ -17,6 +17,7 @@
     <PackageReference Include="Microsoft.AspNetCore.Razor" Version="2.0.1" />
     <PackageReference Include="Microsoft.AspNetCore.Razor.Runtime" Version="2.0.1" />
     <PackageReference Include="Microsoft.AspNetCore.StaticFiles" Version="2.0.1" />
+    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.0.2" />
   </ItemGroup>
 
 </Project>
