--- a/MilitaryStore/bower.json
+++ b/MilitaryStore/bower.json
@@ -3,9 +3,6 @@
   "private": true,
   "dependencies": {
     "bootstrap": "v4.0.0",
-    "jQuery": "3.3.1"
-  },
-  "resolutions": {
-    "bootstrap": "v4.0.0"
+    "fontawesome": "4.6.3"
   }
 }
