Created Identity database

--- a/MilitaryStore/appsettings.json
+++ b/MilitaryStore/appsettings.json
@@ -2,6 +2,9 @@
   "Data": {
     "MilitaryStoreProducts": {
       "ConnectionString": "Server=(localdb)\\MSSQLLocalDB;Database=MilitaryStore;Trusted_Connection=True;MultipleActiveResultSets=true"
+    },
+    "MilitaryStoreIdentity": {
+      "ConnectionString": "Server=(localdb)\\MSSQLLocalDB;Database=Identity;Trusted_Connection=True;MultipleActiveResultSets=true"
     }
   }
 }
