--- a/MilitaryStore/MilitaryStore.csproj
+++ b/MilitaryStore/MilitaryStore.csproj
@@ -11,8 +11,11 @@
   <ItemGroup>
     <PackageReference Include="bootstrap" Version="4.0.0" />
     <PackageReference Include="Bower" Version="1.3.11" />
+    <PackageReference Include="EntityFramework" Version="6.2.0" />
+    <PackageReference Include="Microsoft.AspNet.Identity.EntityFramework" Version="2.2.1" />
     <PackageReference Include="Microsoft.AspNet.Razor" Version="3.2.4" />
     <PackageReference Include="Microsoft.AspNetCore.All" Version="2.0.5" />
+    <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="2.0.1" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc" Version="2.0.2" />
     <PackageReference Include="Microsoft.AspNetCore.Razor" Version="2.0.1" />
     <PackageReference Include="Microsoft.AspNetCore.Razor.Runtime" Version="2.0.1" />
