--- a/MilitaryStore/project.json
+++ b/MilitaryStore/project.json
@@ -30,6 +30,7 @@
       "type": "build"
     }
   },
+
   "tools": {
     "Microsoft.AspNetCore.Razor.Tools": "1.0.0-preview2-final",
     "Microsoft.AspNetCore.Server.IISIntegration.Tools": "1.0.0-preview2-final",
@@ -45,25 +46,37 @@
       ]
     }
   },
-    "frameworks": {
+
+  "frameworks": {
     "netcoreapp1.0": {
       "imports": [ "dotnet5.6", "portable-net45+win8" ]
     }
   },
+
   "buildOptions": {
     "emitEntryPoint": true,
     "preserveCompilationContext": true
   },
+
   "runtimeOptions": {
     "configProperties": {
       "System.GC.Server": true
     }
   },
+
   "publishOptions": {
-    "include": [ "wwwroot", "web.config" ]
+    "include": [
+      "wwwroot",
+      "Views",
+      "appsettings.json",
+      "appsettings.production.json",
+      "web.config"
+    ]
   },
+
   "scripts": {
     "postpublish": [
-      "dotnet publish-iis --publish-folder %publish:OutputPath% --framework%publish:FullTargetFramework%" ]
+      "dotnet publish-iis --publish-folder %publish:OutputPath% --framework%publish:FullTargetFramework%"
+    ]
   }
 }
