--- a/MilitaryStore/MilitaryStore.csproj
+++ b/MilitaryStore/MilitaryStore.csproj
@@ -12,6 +12,7 @@
     <PackageReference Include="bootstrap" Version="4.0.0" />
     <PackageReference Include="Bower" Version="1.3.11" />
     <PackageReference Include="EntityFramework" Version="6.2.0" />
+    <PackageReference Include="GitHub" Version="1.11.2" />
     <PackageReference Include="Microsoft.AspNet.Identity.EntityFramework" Version="2.2.1" />
     <PackageReference Include="Microsoft.AspNet.Razor" Version="3.2.4" />
     <PackageReference Include="Microsoft.AspNetCore.All" Version="2.0.5" />
