--- a/MilitaryStore/appsettings.production.json
+++ b/MilitaryStore/appsettings.production.json
@@ -1,10 +1,10 @@
 ﻿{
   "Data": {
     "MilitaryStoreProducts": {
-      "ConnectionString": "Server=tcp:militarystorecoredb.database.windows.net,1433;Initial Catalog=Products;Persist Security Info=False;User ID=militarystoreadmin;Password=!1R72t83Y9(;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
+      "ConnectionString": "Server=tcp:militarystorecoredb.database.windows.net,1433;Initial Catalog=Products;Persist Security Info=False;User ID=militarystoreadmin;Password=!(;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
     },
     "MilitaryStoreIdentity": {
-      "ConnectionString": "Server=tcp:militarystorecoredb2.database.windows.net,1433;Initial Catalog=Identity;Persist Security Info=False;User ID=militarystoreadmin;Password=!1R72t83Y9(;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
+      "ConnectionString": "Server=tcp:militarystorecoredb2.database.windows.net,1433;Initial Catalog=Identity;Persist Security Info=False;User ID=militarystoreadmin;Password=!(;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
     }
   }
 }
